Bug 635691 - GetAttention() flashes the grandparent window although the parent window is in the forground. r=neil